test_programs/compile_failure/unconstrained_oracle/src/main.nr
#[oracle(getNoun)]
unconstrained fn external_fn() -> field {
    100 / 5
}

fn main() {
    let x = anon();
    assert(x * 5 == 100);
}
